--- a/src/Header.css
+++ b/src/Header.css
@@ -1,8 +1,11 @@
 .header {
-  height: 50px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #333333;
   z-index: 100;
+}
+.header__logo {
+  margin-left: 20px;
 }
