--- a/src/components/ExcelFileUploadPage/ExcelFileUploadPage.css
+++ b/src/components/ExcelFileUploadPage/ExcelFileUploadPage.css
@@ -14,6 +14,10 @@
   width: 350px;
   height: 320px;
   padding: 40px;
+  border-radius: 5px;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .file__logo {
   margin: 40px 0 40px 0;
@@ -22,6 +26,7 @@
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 500;
+  color: #333333;
 }
 .file__button {
   width: 100%;
@@ -56,4 +61,5 @@
   width: 100%;
   bottom: 0px;
   background-color: black;
+  border-radius: 0 0 5px 5px;
 }
