--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,8 @@
   justify-content: space-between;
   background-color: #333333;
   z-index: 100;
+  position: sticky;
+  top: 0;
 }
 .header__logo {
   margin-left: 20px;
