--- a/src/components/TablePage/Toolbar/Filter/Filter.css
+++ b/src/components/TablePage/Toolbar/Filter/Filter.css
@@ -37,3 +37,12 @@
   margin-top: 1px;
   margin-left: 5px;
 }
+
+.filter__popup {
+  position: relative;
+  top: 100px;
+  left: 10;
+  width: 300px;
+  height: 100px;
+  background-color: red;
+}
