--- a/src/components/TablePage/Toolbar/Toolbar.css
+++ b/src/components/TablePage/Toolbar/Toolbar.css
@@ -1,10 +1,15 @@
 .toolbar {
+  position: sticky;
+  top: 60px;
+  z-index: 1;
+  background-color: #eeeeee;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px;
+  height: 63px;
   width: 100%;
 }
+
 .toolbar__left {
   width: 500px;
   display: flex;
